--- a/.github/workflows/automation-tests.yml
+++ b/.github/workflows/automation-tests.yml
@@ -24,5 +24,5 @@ jobs:
     - name: Install Dependencies
       run: npm install
 
-    - name: Run Cypress Tests
-      run: npx cypress open
+    #- name: Run Cypress Tests
+      #run: npx cypress open
